--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "startto-map": "^0.1.7"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently --kill-others 'npm run server' 'react-scripts start'",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
