--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "start:prod": "npm run build && NODE_ENV=production npm run start:server",
     "heroku-prebuild": "cp heroku.env .env",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "npx chromatic --project-token fe45j91f9zd"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -70,6 +71,7 @@
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.27",
     "babel-loader": "^8.1.0",
+    "chromatic": "^5.3.0",
     "concurrently": "^5.3.0",
     "eslint-config-prettier": "^6.13.0",
     "eslint-config-prettier-standard": "^3.0.1",
