--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
   },
   "scripts": {
     "setup": "cp -n sample.env .env || echo .env file already exists. Skipping...",
-    "start": "react-scripts start",
+    "start": "npm run start:prod",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/",
-    "start:ui": "npm run start",
+    "start:ui": "react-scripts start",
     "start:server": "nodemon server",
-    "start:dev": "concurrently --kill-others-on-fail 'npm start' 'PORT=8080 npm run start:server'",
+    "start:dev": "concurrently --kill-others-on-fail 'npm run start:ui' 'PORT=8080 npm run start:server'",
     "start:prod": "npm run build && NODE_ENV=production npm run start:server",
     "heroku-prebuild": "cp heroku.env .env"
   },
