trying new server setup for heroku

--- a/.gitignore
+++ b/.gitignore
@@ -221,6 +221,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+react-ui/node_modules/
 
 # TypeScript v1 declaration files
 typings/
@@ -241,6 +242,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
+
 .env
 .env.test
 
