--- a/.github/workflows/bundlewatch.yml
+++ b/.github/workflows/bundlewatch.yml
@@ -6,13 +6,13 @@ on:
     branches: ["master"]
     paths:
       - .github/workflows/bundlewatch.yml
-      - src/**
+      - react-ui/src/**
       - package*.json
   pull_request:
     types: ["opened", "reopened", "synchronize"]
     paths:
       - .github/workflows/bundlewatch.yml
-      - src/**
+      - react-ui/src/**
       - package*.json
 
 jobs:
