--- a/package.json
+++ b/package.json
@@ -1,80 +1,36 @@
 {
-  "name": "start-dashboard",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@auth0/auth0-react": "^1.0.0",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "airtable": "^0.10.0",
-    "axios": "^0.20.0",
-    "body-parser": "^1.19.0",
-    "bootstrap": "^4.5.2",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "http-proxy-middleware": "^1.0.6",
-    "node-fetch": "^2.6.1",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-app-polyfill": "^1.0.6",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
-    "react-geocode": "^0.2.1",
-    "react-google-autocomplete": "^1.2.6",
-    "react-google-maps": "^9.4.5",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "react-syntax-highlighter": "^12.2.1",
-    "startto-map": "^0.1.7"
+  "name": "start-dashboard-server",
+  "version": "1.0.0",
+  "description": "",
+  "engines": {
+    "node": "14.x"
   },
   "scripts": {
     "setup": "cp -n sample.env .env || echo .env file already exists. Skipping...",
-    "start": "npm run start:prod",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint src/",
-    "start:ui": "react-scripts start",
+    "start": "node server",
+    "build": "cd react-ui/ && npm install && npm run build",
+    "start:ui": "cd react-ui && npm run start",
     "start:server": "nodemon server",
-    "start:dev": "concurrently --kill-others-on-fail 'npm run start:ui' 'PORT=8080 npm run start:server'",
-    "start:prod": "npm run build && NODE_ENV=production npm run start:server",
-    "heroku-prebuild": "cp heroku.env .env"
+    "start:dev": "concurrently --kill-others-on-fail 'npm start:ui' 'PORT=8080 npm run start:server'",
+    "start:prod": "npm run build && NODE_ENV=production npm start"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all",
-      "ie 11"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version",
-      "ie 11"
-    ]
+  "dependencies": {
+    "airtable": "^0.10.0",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.6",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
-    "eslint-config-prettier": "^6.13.0",
-    "eslint-config-prettier-standard": "^3.0.1",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.21.4",
-    "eslint-plugin-standard": "^4.0.1",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
     "prettier-config-standard": "^1.0.1"
-  }
+  },
+  "cacheDirectories": [
+    "node_modules",
+    "react-ui/node_modules"
+  ],
+  "license": "MIT"
 }
