--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,7 +29,7 @@ jobs:
           ${{ runner.os }}-node-
 
     - name: "Install & Build"
-      run: npm install
+      run: cd react-ui && npm install
 
     - name: "ESLint"
-      run: npm run lint
+      run: cd react-ui && npm run lint
