move github actions

--- a/react-ui/.github/workflows/bundlewatch.yml
+++ b/react-ui/.github/workflows/bundlewatch.yml
@@ -43,17 +43,16 @@ jobs:
           ${{ runner.os }}-node-
 
     - name: Install Bundlewatch
-      run: cd react-ui && npm install -g bundlewatch@0.2.6
+      run: npm install -g bundlewatch@0.2.6
 
     - name: "Install & Build"
       run: |
-        cd react-ui
         npm install
         npm run build
 
     # This improves bundlewatch's ability to show changes.
     - name: Rename files
-      working-directory: react-ui/build/static/js/
+      working-directory: build/static/js/
       run: |
         mv 2.*.chunk.js 2.xxxxxxxx.chunk.js
         mv main.*.chunk.js main.xxxxxxxx.chunk.js
