--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "cd react-ui/ && npm install && npm run build",
     "start:ui": "cd react-ui && npm run start",
     "start:server": "nodemon server",
-    "start:dev": "concurrently --kill-others-on-fail 'npm start:ui' 'PORT=8080 npm run start:server'",
+    "start:dev": "concurrently --kill-others-on-fail 'npm run start:ui' 'PORT=8080 npm run start:server'",
     "start:prod": "npm run build && NODE_ENV=production npm start"
   },
   "dependencies": {
@@ -19,7 +19,6 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "http-proxy-middleware": "^1.0.6",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
