--- a/react-ui/sample.env
+++ b/react-ui/sample.env
@@ -1,6 +1,6 @@
 # See: docs/development.md
-REACT_APP_AUTH0_DOMAIN=
-REACT_APP_AUTH0_CLIENT_ID=
+REACT_APP_AUTH0_DOMAIN=start-dashboard.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=cWqYhyMs67OwN4fOWou5N6vAyJg3zsy3
 
 # See: docs/development.md
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyCqhXDnXAnPgXk_4n9EC1u2jeEP5E10k-E
