--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -45,7 +45,7 @@
     "lint": "eslint src/",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-prebuild": "cp heroku.env .env"
+    "prebuild": "cp heroku.env .env"
   },
   "eslintConfig": {
     "extends": "react-app"
