--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -23,7 +23,7 @@
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "startto-map": "^0.1.7"
+    "startto-map": "code-for-canada/start-map#master"
   },
   "devDependencies": {
     "eslint-config-prettier": "^6.13.0",
