--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -52,7 +52,7 @@
     "react-is": "^17.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src/",
     "test": "react-scripts test",
