--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -40,7 +40,7 @@
     "prettier-config-standard": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint src/",
     "test": "react-scripts test",
