--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-syntax-highlighter": "^12.2.1",
+    "react-trello": "^2.2.8",
     "startto-map": "code-for-canada/start-map#master"
   },
   "devDependencies": {
