--- a/react-ui/sample.env
+++ b/react-ui/sample.env
@@ -4,3 +4,9 @@ REACT_APP_AUTH0_CLIENT_ID=cWqYhyMs67OwN4fOWou5N6vAyJg3zsy3
 
 # See: docs/development.md
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyCqhXDnXAnPgXk_4n9EC1u2jeEP5E10k-E
+
+# See: docs/development.md - Enable local HTTPS
+HTTPS=true
+SSL_CRT_FILE=../dev/server.cert
+SSL_KEY_FILE=../dev/server.key
+HOST=start-dashboard
