--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
     "prettier-config-standard": "^1.0.1"
