--- a/airtable-apps/send_email/package.json
+++ b/airtable-apps/send_email/package.json
@@ -11,6 +11,9 @@
         "eslint-plugin-react-hooks": "^2.5.0"
     },
     "scripts": {
+        "start": "block run",
+        "setup:prod": "cd .block && cp prod.remote.json remote.json",
+        "setup:test": "cd .block && cp test.remote.json remote.json",
         "lint": "eslint frontend"
     }
 }
