--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
   },
   "scripts": {
     "setup:hosts": "sudo -- sh -c \"echo '127.0.0.1 start-dashboard' >> /etc/hosts\"",
-    "setup:cert": "mkdir dev && openssl req -nodes -new -x509 -keyout dev/server.key -out dev/server.cert -subj '/CN=start-dashboard'",
+    "setup:cert": "mkdir -p dev && openssl req -nodes -new -x509 -keyout dev/server.key -out dev/server.cert -subj '/CN=start-dashboard'",
     "setup:env": "cp -n sample.env .env || echo .env file already exists. Skipping...",
+    "setup:blocks:prod": "cd airtable-apps/send_email && npm run setup:prod",
+    "setup:blocks:test": "cd airtable-apps/send_email && npm run setup:test",
     "setup": "npm run setup:env && npm run setup:cert && npm run setup:hosts",
+    "install:server": "npm install",
+    "install:ui": "cd react-ui && npm install",
+    "install:blocks": "cd airtable-apps/send_email && npm install",
+    "install:all": "npm run install:server && npm run install:ui && npm run install:blocks:email",
     "start": "node server",
+    "start:blocks": "cd airtable-apps/send_email && npm start",
     "build": "cd react-ui/ && npm install && npm run build",
     "lint": "cd react-ui/ && npm run lint",
     "start:ui": "cd react-ui && npm run start",
     "start:server": "nodemon server",
     "start:dev": "concurrently --kill-others-on-fail 'npm run start:ui' 'PORT=8080 npm run start:server'",
+    "start:dev:blocks": "concurrently --kill-others-on-fail 'npm run start:dev' 'npm run start:blocks'",
     "start:prod": "npm run build && NODE_ENV=production npm start"
   },
   "dependencies": {
