--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "install:server": "npm install",
     "install:ui": "cd react-ui && npm install",
     "install:blocks": "cd airtable-apps/send_email && npm install",
-    "install:all": "npm run install:server && npm run install:ui && npm run install:blocks:email",
+    "install:all": "npm run install:server && npm run install:ui && npm run install:blocks",
     "start": "node server",
     "start:blocks": "cd airtable-apps/send_email && npm start",
     "build": "cd react-ui/ && npm install && npm run build",
