--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "node": "14.x"
   },
   "scripts": {
+    "auth0:setup": "cp a0deploy-cli.sample.config.json && a0deploy-cli.config.json",
+    "auth0:export": "a0deploy export -c a0deploy-cli.config.json -f yaml -o auth0-export",
     "setup:hosts": "sudo -- sh -c \"echo '127.0.0.1 start-dashboard' >> /etc/hosts\"",
     "setup:cert": "mkdir -p dev && openssl req -nodes -new -x509 -keyout dev/server.key -out dev/server.cert -subj '/CN=start-dashboard'",
     "setup:env": "cp -n sample.env .env || echo .env file already exists. Skipping...",
@@ -40,6 +42,7 @@
     "node-mailjet": "^3.3.1"
   },
   "devDependencies": {
+    "auth0-deploy-cli": "^5.3.1",
     "concurrently": "^5.3.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
