--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "auth0:setup": "cp a0deploy-cli.sample.config.json && a0deploy-cli.config.json",
+    "auth0:setup": "cp -n a0deploy-cli.sample.config.json a0deploy-cli.config.json || echo --- Config file already exists. Skipped copy...",
     "auth0:export": "a0deploy export -c a0deploy-cli.config.json -f yaml -o auth0-export",
     "setup:hosts": "sudo -- sh -c \"echo '127.0.0.1 start-dashboard' >> /etc/hosts\"",
     "setup:cert": "mkdir -p dev && openssl req -nodes -new -x509 -keyout dev/server.key -out dev/server.cert -subj '/CN=start-dashboard'",
