--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -11,6 +11,8 @@ jobs:
     # the list of steps that the action will go through
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       # Move all react files to root (including hidden dotfiles)
       - run: |
