Connect links on push, not pull_request.

--- a/.github/workflows/storybook-links.yml
+++ b/.github/workflows/storybook-links.yml
@@ -1,7 +1,6 @@
 name: Deploy Storybooks
 on:
-  pull_request:
-    types: ["opened", "reopened", "synchronize"]
+  push:
     paths:
       - '.github/workflows/storybook.yml'
       - '.github/workflows/storybook-links.yml'
