--- a/.github/workflows/storybook-airtable-app.yml
+++ b/.github/workflows/storybook-airtable-app.yml
@@ -1,5 +1,5 @@
 # name of our action
-name: 'Push StorybookJS to Chromatic'
+name: 'Deploy StorybookJS: Airtable apps'
 # the event that will trigger the action
 on:
   push:
@@ -9,7 +9,7 @@ on:
 
 # what the action will do
 jobs:
-  build-push:
+  deploy:
     # the operating system it will run on
     runs-on: ubuntu-latest
     # the list of steps that the action will go through
