Ensure links present on every push in PRs.

--- a/.github/workflows/storybook-links.yml
+++ b/.github/workflows/storybook-links.yml
@@ -1,10 +1,5 @@
 name: Link to Storybooks
-on:
-  push:
-    paths:
-      - '.github/workflows/storybook.yml'
-      - '.github/workflows/storybook-links.yml'
-      - 'react-ui/**'
+on: push
 
 jobs:
   add-links:
