--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "start": "node server",
     "start:blocks": "cd airtable-apps/send_email && npm start",
     "build": "cd react-ui/ && npm install && npm run build",
-    "lint": "cd react-ui/ && npm run lint",
+    "lint": "eslint server",
+    "lint:all": "npm run lint && cd react-ui/ && npm run lint",
     "start:ui": "cd react-ui && npm run start",
     "start:server": "nodemon server",
     "start:dev": "concurrently --kill-others-on-fail 'npm run start:ui' 'PORT=8080 npm run start:server'",
@@ -41,6 +42,16 @@
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-config-prettier-standard": "^3.0.1",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
