--- a/auth0-export/tenant.yaml
+++ b/auth0-export/tenant.yaml
@@ -179,6 +179,8 @@ clients:
       - 'https://start-dashboard:3000'
       - 'https://start-dashboard:3000/account/success'
       - 'https://start-dashboard-staging.herokuapp.com/account/success'
+      - 'https://start-dashboard:3000/account/deleted'
+      - 'https://start-dashboard-staging.herokuapp.com/account/deleted'
     app_type: spa
     callbacks:
       - 'https://localhost:3000'
@@ -488,7 +490,7 @@ roles:
     permissions:
       - permission_name: 'is:curator'
         resource_server_identifier: 'https://dashboard.streetartoronto.ca/'
-  - name: StART staff
+  - name: StART Staff
     description: A member of the StART team
     permissions:
       - permission_name: 'is:staff'
