--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "start:prod": "npm run build && NODE_ENV=production npm start"
   },
   "dependencies": {
+    "@nomadiclabs/google-maps-react": "^2.0.6",
     "airtable": "^0.10.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
