--- a/.sample.env
+++ b/.sample.env
@@ -3,3 +3,12 @@
 AIRTABLE_TOKEN=
 AIRTABLE_BASE=
 SUBMITTABLE_ACCESS_TOKEN=
+MAILJET_API_KEY=
+MAILJET_SECRET_KEY=
+AUTH0_DOMAIN=
+AUTH0_CLIENT_ID=
+DASHBOARD_API_IDENTIFIER=
+AUTH0_ADMIN_CLIENT_ID=
+AUTH0_ADMIN_CLIENT_SECRET=
+AUTH0_TOKEN_ENDPOINT=
+AUTH0_ADMIN_API_IDENTIFIER=
