fix bug with email template selector in airtable custom block where query strings weren't working

--- a/airtable-apps/send_email/package.json
+++ b/airtable-apps/send_email/package.json
@@ -14,6 +14,7 @@
         "start": "block run",
         "setup:prod": "cd .block && cp prod.remote.json remote.json",
         "setup:test": "cd .block && cp test.remote.json remote.json",
-        "lint": "eslint frontend"
+        "lint": "eslint frontend",
+        "release": "block release"
     }
 }
