--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "jwks-rsa": "^1.11.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
-    "node-mailjet": "^3.3.1"
+    "node-mailjet": "nomadic-labs/mailjet-apiv3-nodejs#master"
   },
   "devDependencies": {
     "auth0-deploy-cli": "^5.3.1",
